# SNS_AD

./: AGENTS.md  ARCHITECTURE.md  GUIDE.md  README.md  pyproject.toml  requirements.txt
config/: schedule.yaml  schedule_register.bat  shop_profile.example.yaml
docs/: DESIGN.md  PRODUCT_SENSE.md
docs/design-docs/: content-strategy.md  core-beliefs.md  index.md
docs/product-specs/: content-generation.md  index.md
docs/references/: platform-guidelines.md
input/blog/: info.yaml
src/: main.py  notifier.py  scheduler.py  telegram_bot.py
src/agents/: blog_agent.py  instagram_agent.py  orchestrator.py  shorts_agent.py  youtube_agent.py
src/core/: config.py  image_gen.py  llm.py  prompts.py  video_editor.py  video_gen.py
src/models/: content.py  shop.py
src/uploaders/: instagram_uploader.py  naver_blog_uploader.py  youtube_uploader.py
src/utils/: blog_input.py  canva_csv.py  hashtags.py  media.py  seo.py
templates/blog/: standard_post.md
templates/instagram/: caption.md
templates/youtube/: script.md
